--- a/autowithnodeport.yml
+++ b/autowithnodeport.yml
@@ -3,18 +3,18 @@ kind: Deployment
 metadata:
   name: mobin-deployment
   labels:
-    app: webapp1
+    app: dpa-deploy
 spec:
-  replicas: 5
+  replicas: 3
   selector:
     matchLabels:
-      app: webapp1
+      app: hpa-deploy
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: webapp1
+        app: hpa-deploy
     spec:
       containers:
       - name: mobinwebapp1
@@ -25,61 +25,37 @@ spec:
           limits:
             cpu: 400m
             memory: "400Mi"
-        requests:
+          requests:
             cpu: 100m
             memory: "100Mi"
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hpa-deploy
+  labels:
+    run: hpa-deploy
+spec:
+  ports:
+  - port: 80
+  selector:
+    run: hpa-deploy
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: mobin-webapp1-service
   labels:
-    app: webapp1
+    app: hpa-deploy
 spec:
   selector:
-    app: webapp1
+    app: hpa-deploy
   type: NodePort
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 30033
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mobin-webapp1-clusterip
-  labels:
-    app: webapp1
-spec:
-  selector:
-    app: webapp1
-  type: ClusterIP
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
----
-apiVersion: apps/v1
-kind: DaemonSet
-metadata:
- name: deamon1
-spec:
- selector:
-   matchLabels:
-     app: webapp1
- template:
-   metadata:
-     name: webapppod
-     labels:
-       app: webapp1
-   spec:
-     containers:
-       - image: grafana/grafana
-         name: grafanacon
-         ports:
-         - containerPort: 3000
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -90,7 +66,7 @@ spec:
     scaleDown:
       stabilizationWindowSeconds: 60
   maxReplicas: 10
-  minReplicas: 1
+  minReplicas: 3
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
