--- a/hpawithnodeport.yml
+++ b/hpawithnodeport.yml
@@ -1,85 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mobin-deployment
-  labels:
-    app: webapp1
+  name: hpa-deploy
 spec:
-  replicas: 5
   selector:
     matchLabels:
-      app: webapp1
-  strategy:
-    type: Recreate
+      run: hpa-deploy
+  replicas: 3
   template:
     metadata:
       labels:
-        app: webapp1
+        run: hpa-deploy
     spec:
       containers:
-      - name: mobinwebapp1
-        image: smobinulla/nginxmob:v1
+      - name: hpa-deploy
+        image: smobinulla/nginxmob:v3
         ports:
         - containerPort: 80
         resources:
           limits:
             cpu: 400m
             memory: "400Mi"
-        requests:
+          requests:
             cpu: 100m
             memory: "100Mi"
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mobin-webapp1-service
+  name: hpa-deploy
   labels:
-    app: webapp1
+    run: hpa-deploy
 spec:
+  ports:
+  - port: 80
   selector:
-    app: webapp1
+    run: hpa-deploy
   type: NodePort
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 30033
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mobin-webapp1-clusterip
-  labels:
-    app: webapp1
-spec:
-  selector:
-    app: webapp1
-  type: ClusterIP
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
----
-apiVersion: apps/v1
-kind: DaemonSet
-metadata:
- name: deamon1
-spec:
- selector:
-   matchLabels:
-     app: webapp1
- template:
-   metadata:
-     name: webapppod
-     labels:
-       app: webapp1
-   spec:
-     containers:
-       - image: grafana/grafana
-         name: grafanacon
-         ports:
-         - containerPort: 3000
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -90,7 +52,7 @@ spec:
     scaleDown:
       stabilizationWindowSeconds: 60
   maxReplicas: 10
-  minReplicas: 1
+  minReplicas: 3
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
