--- a/storageclass1.yml
+++ b/storageclass1.yml
@@ -1,10 +1,10 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: high
+  name: low
 provisioner: kubernetes.io/aws-ebs
 parameters:
-  type: io1
+  type: gp3
 reclaimPolicy: Retain
 allowVolumeExpansion: true
 mountOptions:
