--- a/storage/storagepod1.yml
+++ b/storage/storagepod1.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: gp3
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 3Gi
